stepper fix bug 419 please update to new image

--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -170,16 +170,16 @@
 
     <div class="docs-guideline-group">
       <div
-        class="docs-usage-do docs-usage-w100 docs-usage-center"
-        style="height:360px"
+        class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale"
+        style="height:442px"
       >
-        <img src="assets/img/doc/stepper-do.png" alt="" />
+        <img src="assets/img/doc/stepper-do.png" alt="" style="width: 688px;height: 362px;"/>
       </div>
       <div
-        class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
-        style="height:360px"
+        class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale docs-mt16"
+        style="height:514px"
       >
-        <img src="assets/img/doc/stepper-dont.png" alt="" />
+        <img src="assets/img/doc/stepper-dont.png" alt="" style="width: 688px;height: 434px;"/>
       </div>
     </div>
 
@@ -192,16 +192,16 @@
       >
     </div>
 
-    <div class="docs-usage-spec docs-usage-center mb-16" style="height:280px">
-      <img src="assets/img/doc/stepper-spec.png" alt="" />
+    <div class="docs-usage-spec docs-usage-center-no-scale mb-16" style="height:280px">
+      <img src="assets/img/doc/stepper-spec.png" alt="" style="width:600px;height: 56px;"/>
     </div>
 
-    <div class="docs-usage-spec docs-usage-center mb-16" style="height:280px">
-      <img src="assets/img/doc/stepper-spec-optional.png" alt="" />
+    <div class="docs-usage-spec docs-usage-center-no-scale mb-16" style="height:280px">
+      <img src="assets/img/doc/stepper-spec-optional.png" alt="" style="width:665px;height: 112px;""/>
     </div>
 
-    <div class="docs-usage-spec docs-usage-center mb-16" style="height:522px">
-      <img src="assets/img/doc/stepper-spec-content.png" alt="" />
+    <div class="docs-usage-spec docs-usage-center-no-scale mb-16" style="height:522px">
+      <img src="assets/img/doc/stepper-spec-content.png" alt="" style="width:616px;height: 418px;"/>
     </div>
 
     <div class="doc-divider"></div>
