Stepper Fix bug add padding between control button and stepper

--- a/src/assets/examples/stepper-editable/stepper-editable.component.html
+++ b/src/assets/examples/stepper-editable/stepper-editable.component.html
@@ -1,5 +1,5 @@
 <div class="example-stepper">
-  <button mat-raised-button (click)="isEditable = !isEditable">
+  <button class="example-stepper-control" mat-raised-button (click)="isEditable = !isEditable">
     {{ !isEditable ? 'Enable edit mode' : 'Disable edit mode' }}
   </button>
 
