--- a/src/assets/examples/stepper-optional/stepper-optional.component.html
+++ b/src/assets/examples/stepper-optional/stepper-optional.component.html
@@ -1,5 +1,5 @@
 <div class="example-stepper">
-  <button mat-raised-button (click)="isOptional = !isOptional">
+  <button class="example-stepper-control" mat-raised-button (click)="isOptional = !isOptional">
     {{ !isOptional ? 'Enable optional steps' : 'Disable optional steps' }}
   </button>
 
