tabs fix bug modify picture of spec size

--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -265,10 +265,10 @@
     </div>
 
     <div
-      class="docs-usage-spec docs-usage-center-no-scale"
+      class="docs-usage-spec docs-usage-center"
       style="height:346px"
     >
-      <img src="assets/img/doc/tabs-spec.png" alt="" style="width: 80%" />
+      <img src="assets/img/doc/tabs-spec.png" alt="" />
     </div>
 
     <div class="doc-divider"></div>
