tabs fix bug modify the title of tab-group-theme example

--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -89,7 +89,7 @@
       <div app-docs-example="tab-group-stretched"></div>
     </div>
     <div class="doc-title-4 mb-16">
-      Tab Group with Stretched Labels
+      Customizing the theme options on the tab group
     </div>
 
     <div class="doc-example-container">
