tabs, stepper fix bug capitalize title

--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -61,14 +61,14 @@
     </div>
 
     <div class="doc-title-4 mb-16">
-      Stepper with customized states
+      Stepper with Customized States
     </div>
     <div class="doc-example-container">
       <div app-docs-example="stepper-states"></div>
     </div>
 
     <div class="doc-title-4 mb-16">
-      Stepper that displays errors in the steps
+      Stepper that Displays Errors in the Steps
     </div>
     <div class="doc-example-container">
       <div app-docs-example="stepper-errors"></div>
