--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -89,7 +89,7 @@
       <div app-docs-example="tab-group-stretched"></div>
     </div>
     <div class="doc-title-4 mb-16">
-      Customizing the theme options on the tab group
+      Customizing the Theme Options on the Tab Group
     </div>
 
     <div class="doc-example-container">
