date-picker fix bug change button from raised to flat

--- a/libs/components/date-range-picker/datepicker/range-calendar.html
+++ b/libs/components/date-range-picker/datepicker/range-calendar.html
@@ -61,5 +61,5 @@
 </div>
 <div class="calendar-button-sec">
   <button mat-button color="primary" (click)="onCancel()">Cancel</button>
-  <button mat-raised-button color="primary" (click)="onApply()">Apply</button>
+  <button mat-flat-button color="primary" (click)="onApply()">Apply</button>
 </div>
