--- a/src/assets/examples/datepicker-api/datepicker-api.component.html
+++ b/src/assets/examples/datepicker-api/datepicker-api.component.html
@@ -2,4 +2,4 @@
   <input matInput [matDatepicker]="picker" placeholder="Choose a date">
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
-<button mat-raised-button color="primary" (click)="picker.open()">Open</button>
+<button mat-flat-button color="primary" (click)="picker.open()">Open</button>
