toolkit-v2 divider component created

--- a/src/assets/examples/divider-overview/divider-overview.component.html
+++ b/src/assets/examples/divider-overview/divider-overview.component.html
@@ -1,5 +1,4 @@
-<mat-list class="example-wrapper">
-  <mat-divider></mat-divider>
+<mat-list>
   <mat-list-item>List item</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item>List item</mat-list-item>
@@ -7,5 +6,4 @@
   <mat-list-item>List item</mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item>List item</mat-list-item>
-  <mat-divider></mat-divider>
 </mat-list>
