--- a/src/assets/documents/components/divider.html
+++ b/src/assets/documents/components/divider.html
@@ -24,7 +24,7 @@
       A divider is a thin line that groups content in lists and layouts.
     </div>
     <div class="doc-example-container">
-      <div app-docs-example="divider"></div>
+      <div app-docs-example="divider-overview"></div>
     </div>
     <div class="doc-divider"></div>
     <div class="doc-title-2">
@@ -33,12 +33,12 @@
         <span header-link="props"></span>Props</span
       >
     </div>
+
     <div class="doc-desc-2">
-      To get a customized badge, just set
-      <span class="doc-desc-2-highlight"
-        >color/matBadgeHidden/matBadgeOverlap/matBadgePosition/matBadgeSize</span
-      >
+      To get a customized divider, just set
+      <span class="doc-desc-2-highlight">inset / vertical</span>
     </div>
+
     <table class="doc-props-table">
       <thead>
         <tr>
@@ -53,40 +53,17 @@
           <td>inset</td>
           <td>Whether the divider is an inset divider.</td>
           <td>boolean</td>
-          <td>false</td>
+          <td></td>
         </tr>
+
         <tr>
           <td>vertical</td>
           <td>Whether the divider is vertically aligned.</td>
           <td>boolean</td>
-          <td>false</td>
+          <td></td>
         </tr>
       </tbody>
     </table>
-    <div class="doc-divider"></div>
-    <div class="doc-title-2">
-      Best Practices
-      <span class="docs-markdown-h3" id="best_practices">
-        <span header-link="best_practices"></span>Best Practices</span
-      >
-    </div>
-
-    <div class="doc-desc-2">
-      <p>Dividers separate content into clear groups.</p>
-      <ul class="doc-list">
-        <li>
-          Subtle: Dividers should be noticeable in a layout, but not jarring.
-        </li>
-        <li>
-          Secondary: Dividers should only be used if elements cannot be
-          separated using white space.
-        </li>
-        <li>
-          Infrequent: Use dividers sparingly, to create groupings rather than
-          separate items.
-        </li>
-      </ul>
-    </div>
 
     <div class="doc-divider"></div>
 
