grid-list fix bug change background color change text to number change guideline picture size

--- a/src/assets/documents/components/gridlist.html
+++ b/src/assets/documents/components/gridlist.html
@@ -114,16 +114,16 @@
 
     <div class="docs-guideline-group">
       <div
-        class="docs-usage-do docs-usage-w100 docs-usage-center"
+        class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale"
         style="height:304px"
       >
-        <img src="assets/img/doc/grid-ratio-do.png" alt="" />
+        <img src="assets/img/doc/grid-ratio-do.png" alt="" style="width: 730px"/>
       </div>
       <div
-        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale"
         style="height:304px;margin-top:24px"
       >
-        <img src="assets/img/doc/grid-ratio-dont.png" alt="" />
+        <img src="assets/img/doc/grid-ratio-dont.png" alt="" style="width: 730px"/>
       </div>
     </div>
 
