expansion fix bug add padding top and bottom for guideline picture and spec picture

--- a/src/assets/documents/components/expansion.html
+++ b/src/assets/documents/components/expansion.html
@@ -235,20 +235,20 @@
     </div>
     <div class="docs-guideline-group">
       <div class="docs-usage-do">
-        <div style="width: 100%; height: 298px" class="docs-usage-center">
+        <div style="width: 100%; height: 410px" class="docs-usage-center-no-scale">
           <img
-            class="expansionpanel-usage"
             src="assets/img/doc/expansionpanel-do.png"
             alt=""
+            style="padding:56px 0px;height: 298px;"
           />
         </div>
       </div>
       <div class="docs-usage-dont docs-mt16">
-        <div style="width: 100%; height: 298px" class="docs-usage-center">
+        <div style="width: 100%; height: 410px" class="docs-usage-center-no-scale">
           <img
-            class="expansionpanel-usage"
             src="assets/img/doc/expansionpanel-dont.png"
             alt=""
+            style="padding:56px 0px;height: 298px;"
           />
         </div>
       </div>
@@ -261,8 +261,8 @@
       >
     </div>
 
-    <div class="docs-usage-spec docs-usage-center" style="height:369px">
-      <img src="assets/img/doc/expansionpanel-spec.png" alt="" />
+    <div class="docs-usage-spec docs-usage-center-no-scale" style="height:466px">
+      <img src="assets/img/doc/expansionpanel-spec.png" alt="" style="height: 354px;"/>
     </div>
 
     <div class="doc-divider"></div>
