--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -1,182 +1,238 @@
 <html>
+  <head></head>
 
-<head></head>
-
-<body>
-  <div class="doc-category-title ">
-    Buttons &amp; Indicators
-    <span class="docs-markdown-h3"
-          id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Progress bar
-  </div>
-  <div class="doc-desc-1">
-    Linear progress indicators display progress by animating an indicator along the length of a fixed, visible track. The behavior
-    of the indicator is dependent on whether the progress of a process is known. </div>
-
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Examples
-    <span class="docs-markdown-h3"
-          id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
-  <div class="doc-desc-2">
-    The progress-bar supports four modes: determinate, indeterminate, buffer and query.</div>
-  <div class="doc-example-container">
-    <div app-docs-example="progress-bar-basic"></div>
-  </div>
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3"
-          id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">bufferValue/color/mode/value/nubmer/progressbarId/</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>bufferValue</td>
-        <td>Buffer value of the progress bar. Defaults to zero.</td>
-        <td>number</td>
-        <td>zero</td>
-      </tr>
-      <tr>
-        <td>color</td>
-        <td>Theme color palette for the component.</td>
-        <td>ThemePalette</td>
-        <td>none</td>
-      </tr>
-      <tr>
-        <td>mode</td>
-        <td>Mode of the progress bar. Input must be one of these values: determinate, indeterminate, buffer, query, defaults
-          to &apos;determinate&apos;. Mirrored to mode attribute.</td>
-        <td>string</td>
-        <td>determinate</td>
-      </tr>
-      <tr>
-        <td>value</td>
-        <td>Value of the progress bar. Defaults to zero. Mirrored to aria-valuenow.
-
-        </td>
-        <td>number</td>
-        <td>none</td>
-      </tr>
-      <tr>
-        <td>progressbarId</td>
-        <td>The id of the progress bar.
-
-        </td>
-        <td>string</td>
-        <td>none</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3"
-          id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Linear progress indicators support both determinate and indeterminate operations.
-    <ul class="doc-list">
-      <li>Determinate operations display the indicator increasing in width from 0 to 100% of the track, in sync with the process&#x2019;s
-        progress.
-      </li>
-      <li>Indeterminate operations display the indicator continually growing and shrinking along the track until the process
-        is complete.</li>
-
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3"
-          id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-
-  <div class="doc-desc-2">
-    The track is a fixed width rule, with set boundaries for the indicator to travel along. Track has the same color as the indicator
-    but with 24% opacity. </div>
-
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
-         style="height:160px">
-      <img src="assets/img/doc/progressbar-do.png"
-           alt="">
+  <body>
+    <div class="doc-category-title ">
+      Buttons &amp; Indicators
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
-         style="height:160px">
-      <img src="assets/img/doc/progressbar-dont.png"
-           alt="">
+    <div class="doc-title-1">
+      Progress bar
     </div>
-  </div>
+    <div class="doc-desc-1">
+      Linear progress indicators display progress by animating an indicator
+      along the length of a fixed, visible track. The behavior of the indicator
+      is dependent on whether the progress of a process is known.
+    </div>
 
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
 
+    <div class="doc-title-4 mb-16">
+      Progress Bar Configuration
+    </div>
+    <div class="doc-desc-2">
+      Use the configuration below to customize a slide toggle that best fits
+      your needs:
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="progress-bar-configurable"></div>
+    </div>
 
+    <div class="doc-title-4 mb-16">
+      Determinate
+    </div>
+    <div class="doc-desc-2">
+      Operations where the percentage of the operation complete is known should
+      use the determinate indicator.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="progress-bar-determinate"></div>
+    </div>
 
-  <div class="doc-divider">
+    <div class="doc-title-4 mb-16">
+      Indeterminate
+    </div>
+    <div class="doc-desc-2">
+      Operations where the user is asked to wait while something finishes and
+      it’s not necessary to indicate how long it will take should use the
+      indeterminate indicator.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="progress-bar-indeterminate"></div>
+    </div>
 
-  </div>
+    <div class="doc-title-4 mb-16">
+      Buffer
+    </div>
+    <div class="doc-desc-2">
+      Operations where the user wants to indicate some activity or loading from
+      the server, use the buffer indicator.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="progress-bar-buffer"></div>
+    </div>
 
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3"
-          id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Query
+    </div>
+    <div class="doc-desc-2">
+      For situations where the user wants to indicate pre-loading (until the
+      loading can actually be made), use the query indicator.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="progress-bar-query"></div>
+    </div>
 
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center"
-       style="height:280px">
-    <img src="assets/img/doc/progressbar-spec.png"
-         alt="">
-  </div>
+    <div class="doc-desc-2">
+      To get a customized progress-bar, just set
+      <span class="doc-desc-2-highlight"
+        >bufferValue / color / mode / value / animationEnd / progressbarId /
+        value</span
+      >
+    </div>
 
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>bufferValue</td>
+          <td>Buffer value of the progress bar. Defaults to zero.</td>
+          <td>number</td>
+          <td></td>
+        </tr>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3"
-          id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
-  <a class="doc-download-link"
-     href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sketch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
+        <tr>
+          <td>color</td>
+          <td>Theme color palette for the component.</td>
+          <td>ThemePalette</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>mode</td>
+          <td>
+            Mode of the progress bar. Input must be one of these values:
+            determinate, indeterminate, buffer, query, defaults to
+            &apos;determinate&apos;. Mirrored to mode attribute.
+          </td>
+          <td>
+            &apos;determinate&apos; | &apos;indeterminate&apos; |
+            &apos;buffer&apos; | &apos;query&apos;
+          </td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>value</td>
+          <td>
+            Value of the progress bar. Defaults to zero. Mirrored to
+            aria-valuenow.
+          </td>
+          <td>number</td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>animationEnd</td>
+          <td>
+            Event emitted when animation of the primary progress bar completes.
+            This event will not be emitted when animations are disabled, nor
+            will it be emitted for modes with continuous animations
+            (indeterminate and query).
+          </td>
+          <td>EventEmitter<progressanimationend></progressanimationend></td>
+          <td></td>
+        </tr>
 
+        <tr>
+          <td>progressbarId</td>
+          <td>ID of the progress bar.</td>
+          <td>`mat-progress-bar-${progressbarId++}`</td>
+          <td></td>
+        </tr>
 
-</body>
+        <tr>
+          <td>value</td>
+          <td></td>
+          <td>number</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
 
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
+    </div>
+
+    <div class="doc-desc-2">
+      The track is a fixed width rule, with set boundaries for the indicator to
+      travel along. Track has the same color as the indicator but with 24%
+      opacity.
+    </div>
+
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/progressbar-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/progressbar-dont.png" alt="" />
+      </div>
+    </div>
+
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
+
+    <div class="docs-usage-spec docs-usage-center" style="height:280px">
+      <img src="assets/img/doc/progressbar-spec.png" alt="" />
+    </div>
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sketch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+  </body>
 </html>
