toolkit-v2 toolbar component created

--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -1,6 +1,6 @@
 <div class="docs-example-viewer-wrapper">
 
-  <div class="docs-example-platform">
+  <!-- <div class="docs-example-platform"> -->
 
 
     <!-- <button mat-icon-button *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">
@@ -8,14 +8,14 @@
     </button> -->
 
 
-    <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index"
-      (click)="platform = item;">{{item}}</mat-icon>
+    <!-- <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index"
+      (click)="platform = item;">{{item}}</mat-icon> -->
     
     <!-- <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index"
     >{{item}}</mat-icon> -->
 
 
-  </div>
+  <!-- </div> -->
 
 
 
