--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -1,33 +1,44 @@
 <html>
+  <head></head>
 
-<head></head>
+  <body>
+    <div class="doc-category-title ">
+      Navigation
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
+    </div>
+    <div class="doc-title-1">
+      Toolbar
+    </div>
+    <div class="doc-desc-1">
+      Toolbar displays information and actions relating to the current screen.
+    </div>
 
-<body>
-  <div class="doc-category-title ">
-    Navigation
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Toolbar </div>
-  <div class="doc-desc-1">
-    Toolbar displays information and actions relating to the current screen. </div>
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+      <!-- <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span> -->
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
+    </div>
 
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Examples
-    <!-- <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span> -->
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-  </div>
-  <div class="doc-desc-2">
-    Use in forms to toggle the state of something on or off. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="toolbar-basic"></div>
-  </div>
+    <div class="doc-title-4 mb-16">
+      Basic toolbar
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="toolbar-overview"></div>
+    </div>
 
-  <!-- <div id="exampleWrapper">
+    <div class="doc-title-4 mb-16">
+      Multi-row toolbar
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="toolbar-multirow"></div>
+    </div>
+
+    <!-- <div id="exampleWrapper">
     <div class="doc-desc-2">
       Use in forms to toggle the state of something on or off. </div>
     <div class="doc-example-container">
@@ -35,124 +46,91 @@
     </div>
   </div> -->
 
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-  <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
-  </div>
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Toolbar should:
-    <ul class="doc-list">
-      <li>Be a container for headers, titles, or actions</li>
-      <li>Be positioned in consistent locations in the interface, including title and actions.</li>
-      <li>Be clearly title to help differentiate the different sections beneath them.</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-
-  </div>
-
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Don&#x2019;t wrap text. For maximum legibility, a text label should remain on a single line.
-  </div>
-
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/toolbar-single-do.png" alt="">
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:16px">
-      <img src="assets/img/doc/toolbar-single-dont.png" alt="">
+    <div class="doc-desc-2">
+      To get a customized toolbar, just set
+      <span class="doc-desc-2-highlight">color</span>
     </div>
-  </div>
 
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>color</td>
+          <td>Theme color palette for the component.</td>
+          <td>ThemePalette</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
 
-  <div class="doc-desc-2">
-    Don&#x2019;t place imagery in toolbar that makes the toolbar&#x2019;s text and icons illegible. </div>
+    <div class="doc-divider"></div>
 
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/toolbar-img-do.png" alt="">
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:16px">
-      <img src="assets/img/doc/toolbar-img-dont.png" alt="">
+
+    <div class="doc-desc-2">
+      Don’t place imagery in a toolbar that makes the bar’s text and icons
+      illegible.
     </div>
-  </div>
 
-  <div class="doc-divider">
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w100 docs-usage-center"
+        style="height:304px"
+      >
+        <img src="assets/img/doc/toolbar-img-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w100 docs-usage-center"
+        style="height:304px;margin-top:16px"
+      >
+        <img src="assets/img/doc/toolbar-img-dont.png" alt="" />
+      </div>
+    </div>
 
-  </div>
+    <div class="doc-divider"></div>
 
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
 
+    <div class="docs-usage-spec docs-usage-center" style="height:368px">
+      <img src="assets/img/doc/toolbar-spec.png" alt="" />
+    </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/toolbar-spec.png" alt="">
-  </div>
-
-
-  <!-- <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path within the Sketch App UI:
-  </div>
-  <div sketch-link></div> -->
-
-
-
-
-</body>
-
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link></div>
+  </body>
 </html>
