--- a/src/document.scss
+++ b/src/document.scss
@@ -539,3 +539,73 @@ a {
 .mb-24 {
   margin-bottom: 24px;
 }
+
+.sidebar-seperate-bg {
+  height: 100%;
+  .left {
+    padding-left: 5px;
+    width: 37%;
+    display: inline-block;
+    height: 100%;
+  }
+  .right {
+    width: 61.8%;
+    background-color: #232f34;
+    display: inline-block;
+    height: 100%;
+  }
+}
+
+.sidebar-seperate-divider {
+  height: 100%;
+  .left {
+    padding-left: 5px;
+    width: 37%;
+    display: inline-block;
+    height: 100%;
+    border-right: 1px solid #e9e9e9;
+  }
+  .right {
+    width: 61.8%;
+    display: inline-block;
+    height: 100%;
+  }
+}
+
+.sidebar-seperate-dont {
+  height: 100%;
+  .left {
+    padding-left: 5px;
+    width: 37%;
+    display: inline-block;
+    height: 100%;
+  }
+  .right {
+    width: 61.8%;
+    display: inline-block;
+    height: 100%;
+  }
+}
+
+.sidebar-seperate-spec {
+  border: 1px solid #efefef;
+  height: 100%;
+  .left {
+    padding-left: 5px;
+    width: 36.9%;
+    display: inline-block;
+    height: 100%;
+    background-color: #fff;
+  }
+  .right {
+    width: 62%;
+    display: inline-block;
+    height: 100%;
+    background-color: #232f34;
+    div {
+      position: absolute;
+      bottom: 0px;
+      right: 0px;
+    }
+  }
+}
