--- a/src/assets/examples/bottomsheet-basic/bottomsheet-basic.component.html
+++ b/src/assets/examples/bottomsheet-basic/bottomsheet-basic.component.html
@@ -1,23 +1,3 @@
-<div class="example-wrapper">
-  <button mat-raised-button (click)="openBottomSheet()">Open file</button>
-</div>
+<p>You have received a file called "cat-picture.jpeg".</p>
 
-<ng-template #tpl>
-  <mat-nav-list>
-    <a mat-list-item (click)="openLink($event)">
-      <span mat-line>Item 1</span> <span mat-line>Item 1 description</span>
-    </a>
-
-    <a mat-list-item (click)="openLink($event)">
-      <span mat-line>Item 2</span> <span mat-line>Item 2 description</span>
-    </a>
-
-    <a mat-list-item (click)="openLink($event)">
-      <span mat-line>Item 3</span> <span mat-line>Item 3 description</span>
-    </a>
-
-    <a mat-list-item (click)="openLink($event)">
-      <span mat-line>Item 4</span> <span mat-line>Item 4 description</span>
-    </a>
-  </mat-nav-list>
-</ng-template>
+<button mat-raised-button (click)="openBottomSheet()">Open file</button>
