input fix bug change textarea text color to #000000

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -308,7 +308,9 @@ td.mat-cell,
 input.mat-input-element {
   color: #000000;
 }
-
+textarea.mat-input-element {
+  color: #000000;
+}
 //autocomplete
 .viz-autocomplete-dropdown {
   position: absolute;
