input fix bug change mat-form-field suffix color to #00000

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -311,6 +311,13 @@ input.mat-input-element {
 textarea.mat-input-element {
   color: #000000;
 }
+.mat-form-field-suffix {
+  .mat-icon {
+    color:#000000;
+  }
+}
+
+
 //autocomplete
 .viz-autocomplete-dropdown {
   position: absolute;
