input fix bug change mat-hint font weight to 400

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -316,6 +316,11 @@ textarea.mat-input-element {
     color:#000000;
   }
 }
+mat-hint {
+  strong {
+    font-weight: 400;
+  }
+}
 
 
 //autocomplete
