input fix bug change prefix color to #000000

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -316,6 +316,9 @@ textarea.mat-input-element {
     color:#000000;
   }
 }
+.mat-form-field-prefix {
+  color: #000000;
+}
 mat-hint {
   strong {
     font-weight: 400;
